maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:26: error: '<-' expected but ')' found.
for (i- 1 to 100) {
                ^JediEscaper:34: error: illegal start of simple expression
}
^